[package]
name = "bevy_rapier2d_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_rapier2d = "0.16.0"
bevy_common_assets = { version = "0.3.0", features = [ "ron" ] }
serde = { version = "1.0.143", features = ["derive"] }
