[package]
name = "editor"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.15.1"
bevy_rapier2d_assets = { version = "0.1.0", path = "../bevy_rapier2d_assets" }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master" }
lyon = "1.0.0"
